# gugugaga

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  tmpclaude-c6a8-cwd
.plans/: current.md
.plans/archive/: 2026-01-13.md  adjustable-preview-divider-completed.md  current-20260113.md  pdf-part-extractor-completed.md  table-columns-preview-completed.md  ui-enhancements-completed.md  uploaded-pdf-preview-completed.md
src/kv_pet/: __init__.py  app.py  file_lookup.py  pdf_extract.py
tests/: __init__.py  test_file_lookup.py  test_pdf_extract.py
